<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:icon="@drawable/ic_baseline_create_24"
        android:id="@+id/newsFragment"
        android:title="@string/news"/>

    <item
        android:icon="@drawable/ic_baseline_create_24"
        android:id="@+id/searchFragment"
        android:title="@string/search"/>

    <item
        android:icon="@drawable/ic_baseline_create_24"
        android:id="@+id/helpFragment"
        android:title="@string/help"/>

    <item
        android:icon="@drawable/ic_baseline_create_24"
        android:id="@+id/historyFragment"
        android:title="@string/history"/>

    <item
        android:icon="@drawable/ic_baseline_create_24"
        android:id="@+id/profileFragment"
        android:title="@string/profile"/>

</menu>