<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.DetailNewsFragment.DetailFragment">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatTextView
            android:text="@string/default_title_news"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/icon_calendar" />

            <TextView
                android:layout_gravity="center_vertical"
                android:layout_marginStart="@dimen/indiement5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/default_after_down_text_news"/>


        </GridLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:text="@string/default_text_charity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>


    </androidx.appcompat.widget.LinearLayoutCompat>


</androidx.core.widget.NestedScrollView>