<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:padding="20sp"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_gravity="center_horizontal"
    android:background="@drawable/background_dialog"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_marginTop="10sp"
        android:id="@+id/getPhoto"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView
            android:src="@drawable/ic_baseline_file_download_24"
            android:layout_height="@dimen/size_picture_dialog"
            android:layout_width="@dimen/size_picture_dialog"/>

        <TextView
            android:text="@string/choose_photo"
            android:textSize="@dimen/size_text_dialog"
            android:layout_marginStart="24sp"
            android:layout_gravity="center_vertical"
            android:textColor="@color/color_text"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"/>

    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="@dimen/margin_allow_item_dialog"
        android:id="@+id/makePhoto"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView
            android:src="@drawable/ic_baseline_camera_alt_24"
            android:layout_height="@dimen/size_picture_dialog"
            android:layout_width="@dimen/size_picture_dialog"/>

        <TextView
            android:text="@string/make_picture"
            android:textSize="@dimen/size_text_dialog"
            android:layout_marginStart="24sp"
            android:layout_gravity="center_vertical"
            android:textColor="@color/color_text"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"/>

    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="@dimen/margin_allow_item_dialog"
        android:id="@+id/deletePhoto"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView
            android:src="@drawable/ic_baseline_delete_24"
            android:layout_height="@dimen/size_picture_dialog"
            android:layout_width="@dimen/size_picture_dialog"/>

        <TextView
            android:text="@string/delete"
            android:textSize="@dimen/size_text_dialog"
            android:layout_marginStart="24sp"
            android:layout_gravity="center_vertical"
            android:textColor="@color/color_text"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"/>

    </LinearLayout>



</LinearLayout>