<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/indiment_20"
    tools:context=".presentation.authFragment.AuthFragment">


    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/indiment_20">

        <TextView
            style="@style/DefaultText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/indiment_10"
            android:lineHeight="@dimen/indiment_20"
            android:text="@string/auth_accros_soc_network" />

        <GridLayout
            android:columnCount="3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/indiment_20">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_columnWeight="1"
                android:src="@drawable/vk"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_columnWeight="1"
                android:src="@drawable/fb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_columnWeight="1"
                android:src="@drawable/ok"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>


        </GridLayout>

        <TextView
            style="@style/DefaultText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/indiment_20"
            android:lineHeight="@dimen/indiment_20"
            android:text="@string/auth_application" />

    </androidx.appcompat.widget.LinearLayoutCompat>


    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_marginTop="@dimen/indiment_20"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="E-mail :"
            android:textColor="@color/color_gray_auth"
            android:textSize="12sp" />

        <androidx.appcompat.widget.AppCompatEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/indiment_5"
            android:backgroundTint="@color/gray_color"
            android:inputType="textEmailAddress|textWebEmailAddress"
            android:text="Введите e-mail"
            android:textColor="@color/color_gray_auth" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/indiment_20"
            android:text="Пароль"
            android:textColor="@color/color_gray_auth"
            android:textSize="12sp" />

        <androidx.appcompat.widget.AppCompatEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/indiment_5"
            android:backgroundTint="@color/gray_color"
            android:inputType="text"
            android:text="Введите пароль"
            android:textColor="@color/color_gray_auth" />


        <androidx.appcompat.widget.AppCompatButton
            android:layout_marginTop="@dimen/indiment_20"
            android:text="Войти"
            android:textColor="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>


    </androidx.appcompat.widget.LinearLayoutCompat>

    <GridLayout
        android:layout_marginTop="@dimen/indiment_10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:textSize="@dimen/default_size_text"
            android:textColor="@color/green_color"
            android:layout_gravity="left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/indiment_20"
            android:text="@string/forgot_pwsrd" />


        <TextView
            android:textColor="@color/green_color"
            android:textSize="@dimen/default_size_text"
            android:layout_gravity="right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/indiment_20"
            android:text="@string/sing_up" />


    </GridLayout>


</androidx.appcompat.widget.LinearLayoutCompat>